Added history service
